<resources>
    <string name="facebook_app_id">415486665695330</string>
    <string name="app_name">Al Jazierah</string>
    <string name="title_activity_drawer">Al-Jazierah</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="my_order">My Orders</string>
    <string name="about_berain">About Al-Jazeriah</string>
    <string name="communicate">Communicate</string>
    <string name="why_berain">Why Al-Jazeriah?</string>
    <string name="career">Career</string>
    <string name="contact_us">CONTACT US</string>
    <string name="media_center">Media Center</string>
    <string name="share_the_app">Share the App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_now">Order Now</string>
    <string name="slide1">http://aljazeriah.com.sa/wp-content/uploads/revslider/restaurent-home-english/textEN1.png</string>
    <string name="slide2">http://aljazeriah.com.sa/wp-content/uploads/revslider/restaurent-home-english/textEN2.png</string>
    <string name="slide3">http://aljazeriah.com.sa/wp-content/uploads/revslider/restaurent-home-english/textEN3.png</string>
    <string name="skip_as_visitor">Skip As Visitor</string>
    <string name="login_by_phone">Please Login By Your Phone Number</string>
    <string name="otp_message">Please enter the verification code</string>
    <string name="phone">Phone Number</string>
    <string name="sign_in">Sign in</string>
    <string name="pass">Password</string>
    <string name="email_or_mobile">Email or Mobile</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="sign_up">Sign up</string>
    <string name="login">LOGIN</string>
    <string name="lets_get_started">Let\'s get started</string>
    <string name="city">City</string>
    <string name="choose_your_channel">Choose your channel</string>
    <string name="choose_your_sub_channel">Choose your sub-channel</string>
    <string name="first_name">Name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="next">Next</string>
    <string name="register_account">Register account</string>
    <string name="create_an_account">Create an account</string>
    <string name="password_hint">*******</string>
    <string name="add_new_address">Add new address</string>
    <string name="logout">Logout</string>
    <string name="company">Company</string>
    <string name="please_wait">Please wait</string>
    <string name="products">Products</string>
    <string name="all_products">All Products</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="currency">SAR</string>
    <string name="total_amount">Total without VAT</string>
    <string name="check_out">Check Out</string>
    <string name="back_to_home">Back to Home</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="deleting_confirm">Deleting Confirm</string>
    <string name="order_cancellation_reasons">Order Cancellation Reasons</string>
    <string name="st_refund_to_wallet">Refund to Wallet</string>
    <string name="st_refund_to_bank">Refund to Bank</string>
    <string name="remove_product_message">Do you want to remove this product from cart</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="empty_cart_message">Do you want to clear shopping cart</string>
    <string name="shopping_cart_is_empty">You shopping cart is empty.</string>
    <string name="order_number">Order number </string>
    <string name="collen">:</string>
    <string name="space"> </string>
    <string name="date">Date</string>
    <string name="order_0">You add new order</string>
    <string name="order_2">Your order is confirmed </string>
    <string name="order_3">Your order is assigned to driver</string>
    <string name="order_4">Your order is delivered</string>
    <string name="order_5">Your order is pending </string>
    <string name="order_6">Your order is cancelled</string>
    <string name="order_7">Your order is on Hold</string>
    <string name="order_8">Your order is on Hold with Delivery</string>
    <string name="re_order">Re order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="edit_order">Edit Order</string>
    <string name="carton">Carton</string>
    <string name="delivery_time">Delivery time</string>
    <string name="note">Note</string>
    <string name="career_url">http://aljazeriah.com.sa/%D8%A7%D9%84%D8%AA%D9%88%D8%B8%D9%8A%D9%81/?lang=en</string>
    <string name="faq_url">http://aljazeriah.com.sa/%D8%A7%D9%84%D8%A7%D8%B3%D8%A6%D9%84%D8%A9-%D8%A7%D9%84%D8%B4%D8%A7%D8%A6%D8%B9%D8%A9/?lang=en</string>
    <string name="news_url">http://aljazeriah.com.sa/%D8%A7%D9%84%D8%A3%D8%AE%D8%A8%D8%A7%D8%B1/?lang=en</string>
    <string name="connect_url">http://aljazeriah.com.sa/contact/?lang=en</string>
    <string name="about_url">http://aljazeriah.com.sa/%D8%A7%D9%84%D8%B1%D8%A6%D9%8A%D8%B3%D9%8A%D8%A91/?lang=en</string>
    <string name="why_berain_url">http://aljazeriah.com.sa/our-team/?lang=en</string>
    <string name="social_url">http://aljazeriah.com.sa/%D8%AD%D8%A7%D8%A6%D8%B7-%D8%A7%D9%84%D8%B3%D9%88%D8%B4%D9%8A%D8%A7%D9%84/?lang=en</string>
    <string name="logout_message">Do you want to logout from this App?</string>
    <string name="choose_address">Choose address</string>
    <string name="submit">Submit</string>
    <string name="title_activity_add_address">Add Address</string>
    <string name="address_des">Address desc*</string>
    <string name="search">Search</string>
    <string name="city_req">City *</string>
    <string name="area_req">Area *</string>
    <string name="address_name_req">Address Name *</string>
    <string name="address_name">Address name</string>
    <string name="building_num">Building Number</string>
    <string name="block">building number</string>
    <string name="floor">Floor number</string>
    <string name="floor_num">Floor Number</string>
    <string name="error_text">Abha, Abqiq, Abu Arish, Ahad Al Masarha, Ahad Rufaidah, AL Badaya, Al Bokiria, Al Khobar, AL Khobra, Al muznab, AL Rass, AL Zulfi, AlEhsa, Buraydah, Dammam, Dhahran, Gizan, Hafr El Baten, Jeddah, Jubail, Khafjie, Khamis Mushayt, Macca, Madinah, Naariya, Oniza, Qassim, Qatif, Rafha, Ras Tanura, Riyadh, Riyadh Al Khobra, Sabya, Safwa, Sihat</string>
    <string name="saudia">Saudi</string>
    <string name="get_my_location">Get my current location</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="please_login">Please login to continue</string>
    <string name="alert">Alert</string>
    <string name="change_address">Do you want to change delivery address?</string>
    <string name="deleting_address">Do you want to delete the address ?</string>
    <string name="required">Required</string>
    <string name="confirm_password">Confirm password</string>
    <string name="keep_blank">Keep blank if you want no change</string>
    <string name="title_activity_maps">Map</string>
    <string name="my_account">My account</string>
    <string name="account">Account</string>
    <string name="choose_area">Choose area</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="credit_card">Credit card</string>
    <string name="sadad">Sadad</string>
    <string name="enter_code">Enter the confirmation code form your sms</string>
    <string name="might_take_time">This might take a minute</string>
    <string name="did_not_get">Don\'t get it ?</string>
    <string name="resend_code">Click here to resend</string>
    <string name="code_problem">Having problem receiving your sms, call \ncustomer service at </string>
    <string name="get_started">Get Started</string>
    <string name="app_language">اللغة العربية</string>
    <string name="reset_password">Reset password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="reset_pass">Reset</string>
    <string name="password_not_equal">Passwords are not identical</string>
    <string name="thank_you">Thank You!</string>
    <string name="congratulation">Congratulations </string>
    <string name="thank_u_for_choosing">Thank you for choosing aljazeriah </string>
    <string name="history_orders">History Orders</string>
    <string name="min_order_amount">Minimum order quantity is </string>
    <string name="min_order_amount_1">Carton/shrink</string>
    <string name="welcome">Welcome</string>
    <string name="back_to_products">Back to products</string>
    <string name="activated">activated</string>
    <string name="seletect_city">Select city</string>
    <string name="success">Your data has been saved successfully</string>
    <string name="place_order">Place Order</string>
    <string name="proceed">PROCEED</string>
    <string name="time">Time</string>
    <string name="payment_method">Payment Method</string>
    <string name="crash_toast_text" translatable="false">App has crashed.. please send report to developer</string>
    <string name="sadad_account_id">SADAD Account ID</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="cvv">CVV</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_month">Expiry Month</string>
    <string name="expiry_year">Expiry Month</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="year_1">2018</string>
    <string name="year_2">2019</string>
    <string name="year_3">2020</string>
    <string name="year_4">2021</string>
    <string name="year_5">2022</string>
    <string name="year_6">2023</string>
    <string name="year_7">2024</string>
    <string name="year_8">2025</string>
    <string name="year_9">2026</string>
    <string name="year_10">2027</string>
    <string name="year_11">2028</string>
    <string name="year_12">2029</string>
    <string name="year_13">2030</string>
    <string name="total">Total Amount</string>
    <string name="yes">Yes</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="st_change">CHANGE</string>
    <string name="st_order_summary">Order Summary</string>
    <string name="st_items">Items:</string>
    <string name="st_paymentoption">Payment Option</string>
    <string name="st_paymentcod">Cash on Delivery</string>
    <string name="st_paymentwallet"> Use Wallet</string>
    <string name="st_deliverytime"> Delivery Time</string>
    <string name="st_scheduleorder"> Schedule Order</string>
    <string name="st_monthly">Every Month</string>
    <string name="st_weekly">Every two weeks</string>
    <string name="st_none">None</string>
    <string name="st_schedule_order">Schedule Order</string>
    <string name="st_cod">Cash On Delivery</string>
    <string name="st_usewallet">Use Wallet</string>
    <string name="_string_is_this_stc_number">Is this number registered with STC PAY?</string>
    <string name="no">No</string>
    <string name="want_to_upload">Please confirm the image!</string>
</resources>