<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_div_address"
            android:icon="@drawable/ic_menu_address"
            android:title="@string/delivery_address"
            app:showAsAction="always" />
        <item
            android:id="@+id/nav_my_order"
            android:icon="@drawable/ic_menu_orders"
            android:title="@string/my_order"
            app:showAsAction="always" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about_berain"
            app:showAsAction="always" />

        <item
            android:id="@+id/nav_why_berain"
            android:icon="@drawable/ic_menu_why"
            android:title="@string/why_berain"
            app:showAsAction="always" />
        <item
            android:id="@+id/nav_career"
            android:icon="@drawable/ic_menu_career"
            android:title="@string/career"
            app:showAsAction="always" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_menu_contact_us"
            android:title="@string/contact_us"
            app:showAsAction="always" />
        <item
            android:id="@+id/nav_media_center"
            android:icon="@drawable/ic_menu_media"
            android:title="@string/media_center"
            app:showAsAction="always" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share"
            app:showAsAction="always" />

    </group>
</menu>
