<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginRight="12dp"
    android:layout_marginLeft="12dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical">

 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/payment_method"
     android:textColor="@color/text_color"
     android:textSize="18sp"
     android:fontFamily="@font/roboto_regular"
     android:layout_marginStart="4dp"
     android:id="@+id/textview_payment_head"

     />

    <TextView
        android:id="@+id/paymentOptionView_tvChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/gulf_regular"
        android:gravity="center"
        android:text="@string/st_change"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/st_cod"
        android:id="@+id/tvPaymentType"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textview_payment_head"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvPaymentType"
        android:layout_below="@+id/textview_payment_head"
        android:layout_marginLeft="50dp"
        android:id="@+id/radioButtonWallet"
        android:textColor="@color/black"
        android:backgroundTint="@color/black"
        android:text="@string/st_usewallet"
        android:visibility="visible"/>




</RelativeLayout>