<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="12dp"
    android:visibility="gone"
    android:layout_marginTop="8dp"
    android:layout_marginRight="12dp"
    android:layout_marginBottom="8dp"
    android:orientation="vertical">

 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/st_schedule_order"
     android:layout_marginStart="4dp"
     android:textColor="@color/text_color"
     android:textSize="18sp"
     android:fontFamily="@font/roboto_regular"
     android:id="@+id/textview_schedule_head"
     />




    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        android:weightSum="3"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_height="wrap_content">
    <RadioButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/radioButtonScheduleNone"
        android:textColor="@color/text_color"
        android:button="@drawable/radio_btn_blue"
        android:text="@string/st_none"
        android:fontFamily="@font/roboto_regular"

        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:paddingLeft="5dp"
        />

    <RadioButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/radioButtonScheduleWeekly"
        android:textColor="@color/text_color"
        android:button="@drawable/radio_btn_blue"
        android:text="@string/st_weekly"
        android:layout_marginTop="5dp"
        android:paddingLeft="5dp"
        android:fontFamily="@font/roboto_regular"

        android:layout_weight="1"
        />

    <RadioButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:button="@drawable/radio_btn_blue"
        android:text="@string/st_monthly"
        android:id="@+id/radioButtonScheduleEveryMonth"
        android:layout_marginTop="5dp"
        android:paddingLeft="5dp"
        android:fontFamily="@font/roboto_regular"

        android:layout_weight="1"
        />

    </LinearLayout>
</LinearLayout>