<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/five_dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/tab_selector"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/ten_dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deleting_confirm"
            android:fontFamily="@font/roboto_regular"

            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>


    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five_dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/email_or_mobile"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:minHeight="@dimen/forty_five_dp"
        android:padding="@dimen/eight_dp"
        android:textColor="@color/off_black"
        android:textSize="17sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/five_dp"
        android:gravity="center"
        android:fontFamily="@font/roboto_regular"

        android:text="@string/remove_product_message"
        android:textColor="@color/text_color"
        android:textSize="17sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/five_dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/okBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/five_dp"
            android:layout_marginRight="@dimen/five_dp"
            android:layout_weight=".5"
            android:gravity="center"
            android:background="@drawable/begin_button"
            android:minHeight="@dimen/forty_five_dp"
            android:text="@string/ok"
            android:fontFamily="@font/roboto_regular"

            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/cancelBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_marginStart="@dimen/five_dp"
            android:layout_weight=".5"
            android:gravity="center"
            android:background="@drawable/begin_button"
            android:minHeight="@dimen/forty_five_dp"
            android:text="@string/cancel"
            android:fontFamily="@font/roboto_regular"

            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>