<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/five_dp">


  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/border_rating_alert"
    android:id="@+id/layoutOpt"
    android:padding="10dp">



    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_action_close"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_gravity="right"
        android:id="@+id/imageClose"
        android:padding="7dp"
        />






    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/_string_is_this_stc_number"
        android:textColor="@color/text_color"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:textSize="17sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/button_normal"
            android:layout_margin="20dp"
            />


          <EditText
              android:id="@+id/edit_number"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="number"
              android:text=""
              android:hint="@string/enter_your_number"
              android:padding="10dp"
              android:textColor="@color/text_color"
              android:fontFamily="@font/roboto_regular"
             android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:layout_marginTop="30dp"
              android:layout_marginBottom="35dp"
              android:maxLength="10"/>


  </LinearLayout>


    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="15dp"
        android:background="@drawable/begin_button"
        android:text="@string/proceed"
        android:gravity="center"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:layout_centerInParent="true"
        android:layout_below="@+id/layoutOpt"
        android:id="@+id/tvSubmit"
        android:fontFamily="@font/gulf_regular"
        android:textSize="18sp"
        android:visibility="visible"
        />




</RelativeLayout>